--- a/my_example_report.html
+++ b/my_example_report.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Eliora H" />
 
+<meta name="date" content="2019-05-15" />
 
 <title>Analysisplan report</title>
 
@@ -123,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Analysisplan report</h1>
 <h4 class="author"><em>Eliora H</em></h4>
-<h4 class="date"><em>Sys.date</em></h4>
+<h4 class="date"><em>2019-05-15</em></h4>
 
 </div>
 
